# fuzzy-machines

./: .coverage  .gitignore  .pylintrc  .readthedocs.yaml  .travis.yml  HISTORY.rst  README.md  README.rst  Windows_test_suite.bat  coverage.xml  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  windows_make_docs.bat
.github/workflows/: coverage.yml  push.yml  pylint.yml  pylint_pytest.yml  pytest.yml  tests.yml
docs/: Makefile
docs/source/: HISTORY.rst  api.rst  conf.py  quickstart.rst  tutorials.rst
docs/source/_templates/: custom-module-template.rst
fuzzy_machines/: engine.py  functions.py  kernel.py  memb_funcs.py  operand.py  operands.py  operators.py  rules.py
fuzzy_machines.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: test.py  test.txt
src/fuzz/: engine.py  kernel.py  memb_funcs.py  rules.py
src/fuzzy_machines.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_engine.py  test_functions.py  test_kernel.py  test_memb_funcs.py  test_operators.py  test_rules.py
