[metadata]
name = fuzzy-machines
version = 0.1.3
author = Caio Castro
author_email = caio.castro@daocapital.com.br
description = A generic approach to Fuzzy Logic and Inference Systems 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CTred/fuzzy-machines
project_urls =
    Bug Tracker = https://github.com/CTred/fuzzy-machines/issues
    Documentation = https://fuzzy-machines.readthedocs.io/en/master/index.html
    Fuzzy Logic Tutorial = https://www.youtube.com/watch?v=__0nZuG4sTw&t=3s
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src